--- a/template/index.html
+++ b/template/index.html
@@ -38,6 +38,19 @@
 </head>
 
 <body>
+    <div class="wrapper">
+        <img class="logo" src="./static/images/logo.png" width="100%" alt="">
+        <div class="demo">
+          <p>A compilation tools for FE, built with webpack4.x,</p>
+          <p> compile faster and smart, make work easier.</p>
+          <div class="links">
+            <a href="https://github.com/webkong/easyify" class="github">Github</a>
+            <a href="https://easyify.webkong.cn" class="document">Document</a>
+            <a href="https://github.com/webkong/easyify-cli" class="cli">Easyify-cli</a>
+            <a href="https://github.com/easyify?tab=repositories" class="templates">Easyify-templates</a>
+          </div>
+        </div>
+    </div>
 </body>
 {{#analytics}}
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-79985621-3"></script>
